Viewpoints now have links

--- a/app/templates/analysis.html
+++ b/app/templates/analysis.html
@@ -61,12 +61,12 @@
         <div class="viewpoints-box">
           <div class="primary-box">
             <p>
-              {{ primary }} 
+              <a href="{{ primary }}">{{ primary }}</a>
             </p>
           </div>
           <div class="secondary-box">
             <p>
-              {{ secondary }} 
+              <a href="{{ secondary }}">{{ secondary }}</a>
             </p>
           </div>
         </div>
